<resources>
    <string name="app_name">LAB2!</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_to_rock_paper_scissors">Welcome To Rock, Paper, Scissors</string>
    <string name="please_choose_your_weapon">Please Choose Your Weapon:</string>
    <string name="rock">Rock</string>
    <string name="paper">Paper</string>
    <string name="scissors">Scissors</string>
</resources>
